# SIS-lattice-paymentchannel

./: Cargo.toml  README.md
crates/channel-state/: Cargo.toml
crates/channel-state/src/: lib.rs
crates/channel-types/: Cargo.toml
crates/channel-types/src/: lib.rs
crates/proof-adapter/: Cargo.toml
crates/proof-adapter/src/: lib.rs
docs/: coding-plan.md  design-spec.md
